--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "@gabrielrufino/node-template",
   "version": "1.0.0",
   "description": "An incredible project made in Node.js",
-  "main": "src/index.js",
-  "type": "module",
+  "main": "dist/index.js",
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "start": "node .",
+    "start:dev": "nodemon --ext ts --exec 'ts-node -r dotenv/config src/index.ts'",
+    "test": "vitest run",
     "test:cov": "npm test -- --coverage",
-    "test:watch": "npm test -- --watch",
+    "test:watch": "vitest",
     "prepare": "husky"
   },
   "author": "Gabriel Rufino <contato@gabrielrufino.com>",
@@ -19,15 +20,22 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@faker-js/faker": "^8.4.1",
     "@gabrielrufino/eslint-config": "^1.6.0",
+    "@vitest/coverage-v8": "^2.1.8",
+    "dotenv": "^16.4.7",
     "eslint": "^8.57.1",
-    "eslint-plugin-jest": "^28.9.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0"
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8"
   },
   "funding": [
     {
       "type": "github",
       "url": "https://github.com/sponsors/gabrielrufino"
     }
-  ]
+  ],
+  "dependencies": {
+    "grammy": "^1.33.0"
+  }
 }
