--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gabrielrufino/node-template",
+  "name": "@gabrielrufino/pdfstudio-bot",
   "private": true,
   "version": "1.0.0",
   "main": "dist/index.js",
@@ -20,6 +20,7 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@faker-js/faker": "^8.4.1",
     "@gabrielrufino/eslint-config": "^1.6.0",
+    "@types/pdfkit": "^0.13.8",
     "@vitest/coverage-v8": "^2.1.8",
     "dotenv": "^16.4.7",
     "eslint": "^8.57.1",
@@ -33,6 +34,8 @@
   "dependencies": {
     "@grammyjs/files": "^1.1.1",
     "grammy": "^1.33.0",
+    "muhammara": "^5.3.0",
+    "pdfkit": "^0.15.2",
     "pino": "^9.6.0"
   }
 }
