--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint .",
+    "build": "tsc",
+    "lint": "eslint ./src",
     "lint:fix": "npm run lint -- --fix",
     "start": "node .",
-    "start:dev": "nodemon --ext ts --exec 'ts-node -r dotenv/config src/index.ts'",
+    "start:dev": "nodemon --ext ts --exec 'ts-node -r dotenv/config src/index.ts | pino-pretty'",
     "test": "vitest run",
     "test:cov": "npm test -- --coverage",
     "test:watch": "vitest",
@@ -16,14 +17,14 @@
   "author": "Gabriel Rufino <contato@gabrielrufino.com>",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@antfu/eslint-config": "^3.12.1",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@faker-js/faker": "^8.4.1",
-    "@gabrielrufino/eslint-config": "^1.6.0",
     "@types/pdfkit": "^0.13.8",
     "@vitest/coverage-v8": "^2.1.8",
     "dotenv": "^16.4.7",
-    "eslint": "^8.57.1",
+    "eslint": "^9.17.0",
     "husky": "^9.1.7",
     "nodemon": "^3.1.9",
     "pino-pretty": "^13.0.0",
