--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "dependencies": {
     "@grammyjs/files": "^1.1.1",
+    "@mikro-orm/core": "^6.4.2",
+    "@mikro-orm/mongodb": "^6.4.2",
     "grammy": "^1.33.0",
     "muhammara": "^5.3.0",
     "pdfkit": "^0.15.2",
