--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,3 +29,24 @@ jobs:
           image-version: ${{ env.IMAGE_VERSION }}
           registry-username: gabrielrufino
           registry-token: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
+  start:
+    name: Start
+    if: ${{ github.ref_name == 'main' }}
+    runs-on: ubuntu-latest
+    needs:
+      - dockerfile-cd
+    steps:
+      - uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            docker container stop pdfstudio-bot
+            docker container rm pdfstudio-bot
+            docker image pull gabrielrufino/pdfstudio-bot:latest
+            docker container run \
+              -d \
+              --name pdfstudio-bot \
+              gabrielrufino/pdfstudio-bot:latest
