--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "vitest run",
     "test:cov": "npm test -- --coverage",
     "test:watch": "vitest",
-    "prepare": "husky"
+    "prepare": "if [[ $NODE_ENV != \"production\" ]]; then husky; fi"
   },
   "author": "Gabriel Rufino <contato@gabrielrufino.com>",
   "license": "UNLICENSED",
