--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,13 +1,13 @@
 name: CD
 
-on:
-  workflow_run:
-    workflows: ['CI']
-    types:
-      - completed
-    branches:
-      - develop
-      - main
+# on:
+#   workflow_run:
+#     workflows: ['CI']
+#     types:
+#       - completed
+#     branches:
+#       - develop
+#       - main
 
 jobs:
   dockerfile-cd:
