--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint ./src",
     "lint:fix": "npm run lint -- --fix",
     "start": "node .",
-    "start:dev": "nodemon --ext ts --exec 'ts-node -r dotenv/config src/index.ts | pino-pretty'",
+    "start:dev": "tsx watch --env-file=.env src/index.ts | pino-pretty",
     "test": "vitest run",
     "test:cov": "npm test -- --coverage",
     "test:watch": "vitest",
@@ -26,17 +26,16 @@
     "dotenv": "^16.6.1",
     "eslint": "^9.30.1",
     "husky": "^9.1.7",
-    "nodemon": "^3.1.10",
     "pino-pretty": "^13.0.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "vitest": "^2.1.8"
   },
   "dependencies": {
     "@grammyjs/files": "^1.1.1",
-    "@mikro-orm/core": "^6.4.16",
-    "@mikro-orm/mongodb": "^6.4.16",
     "grammy": "^1.37.0",
+    "mongodb": "^6.17.0",
     "muhammara": "^5.3.0",
     "pdfkit": "^0.15.2",
     "pino": "^9.7.0"
