ix: use upsert with updateOne for user registration and adjust dev env file
- Replace insertOne with updateOne + upsert in start command to avoid duplicate users and allow updates
- Change start:dev script to use .env.local for environment variables

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint ./src",
     "lint:fix": "npm run lint -- --fix",
     "start": "node .",
-    "start:dev": "tsx watch --env-file=.env src/index.ts | pino-pretty",
+    "start:dev": "tsx watch --env-file=.env.local src/index.ts | pino-pretty",
     "test": "vitest run",
     "test:cov": "npm test -- --coverage",
     "test:watch": "vitest",
