--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongodb": "^6.17.0",
     "muhammara": "^5.3.0",
     "pdfkit": "^0.15.2",
-    "pino": "^9.7.0"
+    "pino": "^9.7.0",
+    "puppeteer": "^24.14.0"
   }
 }
