--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vitest/coverage-v8": "^2.1.9",
     "eslint": "^9.34.0",
     "husky": "^9.1.7",
+    "mongodb-memory-server": "^10.2.0",
     "pino-pretty": "^13.1.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
