refactor: improve DownloadHandler configuration and add type utilities
- Add @gabrielrufino/types package for Nullable utility type
- Extract PDF and browser configurations to static readonly constants
- Improve PDF generation with A4 format, margins and background printing
- Add comprehensive browser args for better containerized execution
- Enhance onCommand message with emojis and clearer instructions
- Replace manual null types with Nullable utility type in session interfaces
- Mark unused decorator parameters with underscore prefix for linting

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@faker-js/faker": "^8.4.1",
+    "@gabrielrufino/types": "^1.0.0",
     "@vitest/coverage-v8": "^2.1.9",
     "eslint": "^9.36.0",
     "husky": "^9.1.7",
