--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@grammyjs/files": "^1.2.0",
+    "@grammyjs/runner": "^2.0.3",
     "grammy": "^1.38.3",
     "mongodb": "^6.20.0",
     "muhammara": "^5.4.0",
