--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@gabrielrufino/pdf-studio-bot",
-  "private": true,
   "version": "1.3.5",
+  "private": true,
+  "author": "Gabriel Rufino <contato@gabrielrufino.com>",
+  "license": "UNLICENSED",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
@@ -10,14 +12,22 @@
     "lint": "eslint ./src",
     "lint:fix": "npm run lint -- --fix",
     "start": "node .",
-    "start:dev": "tsx watch --env-file=.env src/index.ts | pino-pretty",
+    "start:dev": "tsx watch --env-file=.env src/index.ts",
     "test": "vitest run",
     "test:cov": "npm test -- --coverage",
     "test:watch": "vitest",
     "prepare": "if [[ $NODE_ENV != \"production\" ]]; then husky; fi"
   },
-  "author": "Gabriel Rufino <contato@gabrielrufino.com>",
-  "license": "UNLICENSED",
+  "dependencies": {
+    "@grammyjs/files": "^1.2.0",
+    "@grammyjs/runner": "^2.0.3",
+    "grammy": "^1.38.4",
+    "mongodb": "^6.21.0",
+    "muhammara": "^5.4.0",
+    "pino": "^9.14.0",
+    "pino-loki": "^3.0.0",
+    "puppeteer": "^24.33.0"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^3.16.0",
     "@commitlint/cli": "^19.8.1",
@@ -32,14 +42,5 @@
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.8"
-  },
-  "dependencies": {
-    "@grammyjs/files": "^1.2.0",
-    "@grammyjs/runner": "^2.0.3",
-    "grammy": "^1.38.4",
-    "mongodb": "^6.21.0",
-    "muhammara": "^5.4.0",
-    "pino": "^9.14.0",
-    "puppeteer": "^24.33.0"
   }
 }
